app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-ext
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: playground
  ports:
  - name: http
    port: 8888
    targetPort: 8888
