app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground
            port:
              number: 80
